--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restraunt['price']) <"
+    "    if len(restraunt['price']) < len(alt)"
    ]
   },
   {
