Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restraunt['price']) < len(alternative['price'])"
+    "    if len(restraunt['price']) < len(alternative['price']):"
    ]
   },
   {
