--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,8 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restraunt['price']) < len(alternative['price']):"
+    "    if len(restraunt['price']) < len(alternative['price']):\n",
+    "        return True"
    ]
   },
   {
