--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,8 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restraunt['price']) < len(alternative['price']):\n",
-    "        return True"
+    "        return True\n",
+    "    "
    ]
   },
   {
