--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restraunt['price']) < len(alternative['price']):\n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
     "    "
    ]
