--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
-    "    elif len(restaurant['price']) < len(alternative['price']):\n",
+    "    elif len(restaurant['price']) == len(alternative['price']):\n",
     "        return False\n",
     "    "
    ]
