--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,8 +379,7 @@
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
     "    elif len(restaurant['price']) == len(alternative['price']):\n",
-    "        return False\n",
-    "    "
+    "        return False"
    ]
   },
   {
