Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,20 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
-    "    else len(restaurant['price']) == len(alternative['price']):\n",
+    "    elif len(restaurant['price']) == len(alternative['price']):\n",
     "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
