Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,8 @@
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
     "    elif len(restaurant['price']) == len(alternative['price']):\n",
-    "        return False"
+    "        return False\n",
+    "    else"
    ]
   },
   {
