--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,8 @@
     "        return True\n",
     "    elif len(restaurant['price']) == len(alternative['price']):\n",
     "        return False\n",
-    "    else"
+    "    else:\n",
+    "        return False"
    ]
   },
   {
