--- a/index.ipynb
+++ b/index.ipynb
@@ -303,6 +303,8 @@
     "    if restaurant['rating']>alternative['rating']:\n",
     "        return True\n",
     "    elif restaurant == alternative:\n",
+    "        return False\n",
+    "    else:\n",
     "        return False"
    ]
   },
