--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if len(restaurant['rating']) >= rating "
+    "    if len(restaurant['rating']) >= rating:\n",
+    "        return True"
    ]
   },
   {
