--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,8 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if len(restaurant['rating']) >= rating:\n",
-    "        return True"
+    "        return True\n",
+    "    else:"
    ]
   },
   {
