--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if int(len(restaurant['rating'])) >= rating:\n",
+    "    if f(len(restaurant['rating'])) >= rating:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
