--- a/index.ipynb
+++ b/index.ipynb
@@ -466,12 +466,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if len(restaurant['rating']) >= int(rating:\n",
+    "    if len(restaurant['rating']) >= float(rating):\n",
     "        return True\n",
     "    else:\n",
     "        return False"
