Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if len(restaurant['rating']) >= float(rating):\n",
+    "    if len(int(restaurant['rating'])) >= float(rating):\n",
     "        return True\n",
     "    else:\n",
     "        return False"
