Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -466,12 +466,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating'])) >= rating:\n",
+    "    if restaurant['rating'] >= rating:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
